--- a/.env.vendas
+++ b/.env.vendas
@@ -1,3 +1,3 @@
 ConnectionStrings__DefaultConnection=Server=sqlserver;Database=DBVendas;User Id=sa;Password=Sandro@f450;TrustServerCertificate=True;
-ConnectionStrings__RabbitMq=amqp://guest:guest@rabbitmq:5672/
+ConnectionStrings__RabbitMq=amqps://rsclvuno:BdbI1Gflk5yY3CDst7oN9cbxOeWZCffb@jaragua.lmq.cloudamqp.com/rsclvuno
 ASPNETCORE_ENVIRONMENT=Production
