feat: Adiciona no coluna na tabela Pedidos: DataPedido

--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,162 @@
-# Node.js
-node_modules/
+# ==================================================
+# ARQUIVOS DE AMBIENTE E CONFIGURAÇÕES SENSÍVEIS
+# ==================================================
+.env
+.env.*
+!.env.example
+*.env.local
+*.env.development
+*.env.production
+config/local.json
+config/development.json
+config/production.json
+secrets/
+credentials/
+
+# ==================================================
+# LOGS
+# ==================================================
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+logs/
+*.log.*
 
-# Python
-__pycache__/
-*.py[cod]
-*.pyo
-*.pyd
-*.env
+# ==================================================
+# DEPENDÊNCIAS E BUILD
+# ==================================================
+# Dependências Node.js
+node_modules/
+*/node_modules/
 
-# Ambiente
-.env
-.env.*
+# Build outputs
+dist/
+build/
+*/dist/
+*/build/
+.out/
+.next/
+.nuxt/
 
+# Cache de package managers
+.npm
+.yarn/cache
+.yarn/unplugged
+.yarn/build-state.yml
+.yarn/install-state.gz
+.pnp.*
 
-# IDEs
+# ==================================================
+# DOCKER
+# ==================================================
+.docker/
+docker-compose.override.yml
+docker-compose.prod.yml
+
+# ==================================================
+# IDEs E EDITORES
+# ==================================================
 .vscode/
 .idea/
 *.swp
-
-# Sistema operacional
+*.swo
+*~
 .DS_Store
 Thumbs.db
+
+# ==================================================
+# SISTEMAS OPERACIONAIS
+# ==================================================
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# ==================================================
+# LINGUAGENS ESPECÍFICAS
+# ==================================================
+
+## Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+env/
+venv/
+.venv/
+
+## Java
+target/
+*.class
+*.jar
+*.war
+*.ear
+
+## Go
+bin/
+pkg/
+
+## PHP
+vendor/
+
+## Ruby
+*.gem
+.bundle
+
+# ==================================================
+# TEMPORÁRIOS E CACHE
+# ==================================================
+*.tmp
+*.temp
+.cache/
+.parcel-cache/
+
+# ==================================================
+# COVERAGE E TESTES
+# ==================================================
+coverage/
+*.lcov
+.nyc_output/
+
+# ==================================================
+# MICROSERVICES SPECIFIC
+# ==================================================
+# Arquivos de configuração local de cada microserviço
+APIGateway/config/local.*
+MicroServiceAuthentication/config/local.*
+MicroServiceEsteque/config/local.*
+MicroServiceVendas/config/local.*
+
+# Certificados e chaves
+*.pem
+*.key
+*.crt
+*.csr
+
+# ==================================================
+# UPLOADS E DADOS TEMPORÁRIOS
+# ==================================================
+uploads/
+temp/
+tmp/
+
+# ==================================================
+# BACKUPS
+# ==================================================
+*.bak
+*.backup
+*.old
+
+# ==================================================
+# MISC
+# ==================================================
+*.tgz
+*.tar.gz
+*.zip
