fix - Correção que ajusta a autenticação do gateway com micro serviço Auth com um token interno gerado no gateway.

--- a/APIGateway/appsettings.json
+++ b/APIGateway/appsettings.json
@@ -7,7 +7,9 @@
   },
   "AllowedHosts": "*",
   "Jwt": {
-    "Key": ""
+    "Key": "",
+    "Issuer": "",
+    "Audience": ""
   },
   "ApiKey": {
     "Key": ""
